# PAMSI_projekt2

PAMSI_Zad2/: CMakeLists.txt  Lista.cpp  Lista.h  Pakiet.cpp  Pakiet.h  main.cpp  sortowanie_kubelkowe.cpp  sortowanie_kubelkowe.h  sortowanie_przez_scalanie.cpp  sortowanie_przez_scalanie.h  sortowanie_szybkie.cpp  sortowanie_szybkie.h
